fixed layout overflow

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,27 @@
 	z-index: 2;
 }
 
+.test {
+	margin: 0 auto;
+	max-width: 420px;
+	min-width: 220px;
+	padding: 0.25rem;
+}
+
+@media (min-width: 768px) {
+	.test {
+		margin: 0 auto;
+		max-width: 220px;
+		min-width: 220px;
+		padding: 0.25rem;
+	}
+
+	.link-wrapper {
+		display: flex;
+		justify-content: center;
+	}
+}
+
 .img-wrapper {
 	width: 100%;
 	height: 200px;
